# ncareol

./: .clang-format  .gitignore  CMakeLists.txt  PackagesList.cmake  ProjectName.cmake  Readme.md  TPLsList.cmake  Version.cmake
cmake/: CallbackSetupExtraOptions.cmake  Dependencies.cmake  ExtraRepositoriesList.cmake  QtPrlAdditions.cmake
cmake/TPLs/: FindTPLQt5Core.cmake  FindTPLQt5Gui.cmake  FindTPLQt5PrintSupport.cmake  FindTPLQt5Widgets.cmake
ncareolskewt/: Adiabats.cpp  Adiabats.h  CMakeLists.txt  IsoMR.cpp  IsoMR.h  IsoPleth.cpp  IsoPleth.h  IsoPress.cpp  IsoPress.h  IsoTherms.cpp  IsoTherms.h  PAdiabats.cpp  PAdiabats.h  PresRect.cpp  PresRect.h  Rect.cpp  Rect.h  SkewT.cpp  SkewT.h  SkewTAdapter.cpp  SkewTAdapter.h  SkewTAdapterSVG.cpp  SkewTAdapterSVG.h  SkewTMetFormulas.cpp  SkewTMetFormulas.h  SkewTRect.cpp  SkewTRect.h  SkewTdefs.h  SkewTdoxygen.h  SkewTtrace.cpp  SkewTtrace.h  WindBarb.cpp  WindBarb.h  WindBarbs.cpp  WindBarbs.h
ncareolskewtqt/: CMakeLists.txt  SkewTAdapterQt.cpp  SkewTAdapterQt.h
ncareolskewtqt/cmake/: Dependencies.cmake
ncareolskewtqt/example/: CMakeLists.txt  SkewtQtTest.cpp  SkewtQtTest.h  test.cpp
